--- a/translations/messages+intl-icu.nl.yaml
+++ b/translations/messages+intl-icu.nl.yaml
@@ -66,6 +66,7 @@ global.name: "Naam"
 global.not_available: "niet beschikbaar"
 global.not_yet_processed: "Nog niet verwerkt"
 global.optional: "optioneel"
+global.part_of: "onderdeel van"
 global.pagination: "Paginering"
 global.period: "Periode"
 global.prefixes: "Prefixes"
@@ -492,6 +493,8 @@ admin.dossiers.woo-decision.form.content.attachments_help: 'De documenten die me
 admin.dossiers.woo-decision.step.replace_inventory: "Productierapport vervangen"
 admin.dossiers.woo-decision.step.replace_document: "Document vervangen"
 admin.dossiers.woo-decision.step.withdraw_document: "Document intrekken"
+admin.dossiers.woo-decision.no_docs: "Er zijn geen documenten aangetroffen in dit besluit die verwijderd kunnen worden."
+admin.dossiers.woo-decision.withdraw_decision: "Besluit verwijderen"
 admin.dossiers.decision.number: "Besluit {dossier_nr}"
 admin.dossiers.decision.inquiry_number: "Besluiten voor zaaknummer {case_nr}"
 admin.dossiers.documents.inquiry_number: "Documenten met zaaknummer {case_nr} "
@@ -616,6 +619,7 @@ public.search.label: "Zoeken"
 public.search.label.results: "Ga naar de zoekresultaten"
 public.search.filter_results: "Filter resultaten"
 public.search.filter_remove: "Filter verwijderen"
+public.search.invalid_date_period: "Kies een periode waarbij de einddatum na de startdatum ligt."
 
 public.search.no_search_results.title: "Geen zoekresultaten"
 public.search.no_search_results.description: 'We konden geen documenten vinden die passen bij uw zoekopdracht "{query}"'
